[metadata]
name = yelp_cheetah
version = 0.19.1
description = cheetah, hacked by yelpers
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/Yelp/yelp_cheetah
author = Anthony Sottile, Buck Evan
author_email = buck@yelp.com
license = MIT License
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Site Management
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Topic :: Text Processing

[options]
packages = find:
install_requires =
    markupsafe
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    cheetah-compile = Cheetah.cheetah_compile:main
distutils.setup_keywords =
    yelp_cheetah = Cheetah.setuptools_support:setup_callback

[options.extras_require]
testing =
    pyquery

[coverage:run]
plugins = covdefaults
omit =
    testing/templates/src/*
